added fr & en support to Recoil example

--- a/template/public/locales/en/translation.json
+++ b/template/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "exampleRecoil":"👇🏼👇🏼👇🏼 This is an Recoil Atom & Selector usage example 👇🏼👇🏼👇🏼:",
   "subTitle": "An open source service",
   "sendPicture":"You have sent an image",
   "receivePicture":"You have received an image",
