--- a/template/public/locales/fr/translation.json
+++ b/template/public/locales/fr/translation.json
@@ -1,4 +1,5 @@
 {
+  "exampleRecoil":"👇🏼👇🏼👇🏼 Il s'agit d'un exemple d'utilisation de Recoil (Atom & Selector) 👇🏼👇🏼👇🏼 :",
   "subTitle": "Un service Open sources",
   "sendPicture":"Vous avez envoyé une image",
   "receivePicture":"Vous avez reçu une image",
