added custom alert

--- a/template/public/locales/en/translation.json
+++ b/template/public/locales/en/translation.json
@@ -43,5 +43,9 @@
   "roomNameReq":"You must enter a room name",
   "politic":"By continuing as a guest, you agree to the Terms and Conditions Terms and Conditions. Learn more about how we collect, use and share share your data in our Data Use Policy, and how we use and how we use cookies and other similar technologies in our technologies in our Cookie Usage Policy. Policy.",
   "botMess":"I am ChatBot, but unfortunately, I only speak French for the moment!  My creator is working on it right now.😉",
-  "botTips":"See you soon"
+  "botTips":"See you soon",
+  "alertCloseChatTitle": "By closing this window you will exit the room",
+  "alertMessIfMessagesList": "and delete your message history...",
+  "confirmActionCloseChat":"Do you really want to do this action?",
+  "youHaveCopiedId":"You have copied the Id"
 }
