--- a/template/public/locales/fr/translation.json
+++ b/template/public/locales/fr/translation.json
@@ -43,5 +43,9 @@
   "roomNameReq":"Vous devez obligatoirement entrer un nom de room",
   "politic":"En continuant en tant qu’invité(e), vous acceptez les Conditions générales du site. Découvrez comment nous collectons, utilisons et partageons vos données dans notre Politique d’utilisation des données, et comment nous utilisons les cookies et autres technologies similaires dans notre Politique d’utilisation des cookies.",
   "botMess":"Je suis ChatBot, tu peut m'appeler en tapant #chatbot. Toute conversation qui commence par # s'adresse automatiquement à moi, tu peut me poser des questions, me souhaiter une bonne journée... et tout et tout! Taper la discute quoi...!",
-  "botTips":"Astuce : Tapez &météo pour connaitre la météo de la ville que vous souhaitez !"
+  "botTips":"Astuce : Tapez &météo pour connaitre la météo de la ville que vous souhaitez !",
+  "alertCloseChatTitle": "En fermant cette fenêtre vous allez sortir de la room",
+  "alertMessIfMessagesList":"et effacer l'historique de vos messages...",
+  "confirmActionCloseChat":"Souhaitez vous vraiment faire cette action ?",
+  "youHaveCopiedId":"Vous avez copié l'Id "
 }
